fix style and scrollbar

--- a/v2/static/css/style.css
+++ b/v2/static/css/style.css
@@ -11,23 +11,36 @@ pre{
 #editor {
     border: none;
     color: #eee;
-    padding: 2em;
-    height: 300px;
-    min-height: 100%;
-    min-height: 50vh;
-    max-height: 100%;
+    height: 50vh;
+    min-height: 200px;
+    max-height: 50vh;
     background-color: #2b2b2b;
     width: 100%;
     min-width: 100%;
     max-width: 100%;
     resize: none;
-    height: 301px;
+}
+*::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
 }
 
+*::-webkit-scrollbar
+{
+	width: 6px;
+	background-color: #F5F5F5;
+}
+
+*::-webkit-scrollbar-thumb
+{
+	background-color: #000000;
+}
 #compiled {
 	border-top: 1px solid #353535;
-	min-height: 50vh;
-	height: 100%;
+	min-height: 100px;
+	max-height: 50vh;
+	height: 50vh;
 	margin: 0;
 	min-width: 100%;
 	max-width: 100%;
